[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/entity/wizard/wizard-idle-3.png" type="Texture" id=1]
[ext_resource path="res://assets/entity/wizard/wizard-idle-2.png" type="Texture" id=2]
[ext_resource path="res://assets/entity/wizard/fire7.png" type="Texture" id=3]
[ext_resource path="res://assets/entity/wizard/fire8.png" type="Texture" id=4]
[ext_resource path="res://assets/entity/wizard/wizard-idle-4.png" type="Texture" id=5]
[ext_resource path="res://assets/entity/wizard/fire3.png" type="Texture" id=6]
[ext_resource path="res://assets/entity/wizard/fire6.png" type="Texture" id=7]
[ext_resource path="res://assets/entity/wizard/fire5.png" type="Texture" id=8]
[ext_resource path="res://assets/entity/wizard/wizard-idle-5.png" type="Texture" id=9]
[ext_resource path="res://assets/entity/wizard/fire2.png" type="Texture" id=10]
[ext_resource path="res://assets/entity/wizard/fire4.png" type="Texture" id=11]
[ext_resource path="res://assets/entity/wizard/fire10.png" type="Texture" id=12]
[ext_resource path="res://assets/entity/wizard/fire9.png" type="Texture" id=13]
[ext_resource path="res://assets/entity/wizard/wizard-idle-1.png" type="Texture" id=14]
[ext_resource path="res://assets/entity/wizard/fire1.png" type="Texture" id=15]
[ext_resource path="res://assets/entity/wizard/enemy-death.png" type="Texture" id=16]
[ext_resource path="res://entity/wizard.gd" type="Script" id=17]
[ext_resource path="res://entity/fx/health_bar.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/light.png" type="Texture" id=19]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 16 )
region = Rect2( 81, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 16 )
region = Rect2( 162, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 16 )
region = Rect2( 243, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 16 )
region = Rect2( 324, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 16 )
region = Rect2( 405, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 16 )
region = Rect2( 486, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 16 )
region = Rect2( 567, 0, 81, 66 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 37, 45 )

[node name="wizard" type="KinematicBody2D"]
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.2, 2.2 )
frames = SubResource( 2 )
animation = "attack"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 28 )
shape = SubResource( 12 )

[node name="health_bar" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( 0, -50 )
scale = Vector2( 2, 1.5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 17 )
texture = ExtResource( 19 )
color = Color( 1, 0.305882, 0.305882, 1 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
